# 2023-package

./: .gitignore  README.md  pyproject.toml  setup.py
src/idgenerator/: __init__.py
tests/: test_idgenerator.py
